--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
 <body>
 
-
-
-
   <main>
     <ol>
       <li>
@@ -30,14 +27,12 @@
           <li>
             <a href="#" aria-label="Favourite Crystal">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Crystal">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
@@ -46,8 +41,7 @@
       <li>
         <h2>Diamond</h2>
         <img src="images/diamond.svg" alt="">
-        <p>Diamonds sparkle in all shapes, sizes &
-        clarities.</p>
+        <p>Diamonds sparkle in all shapes, sizes & clarities.</p>
         <ul>
           <li>
             <a href="#" class="btn" aria-label="Add Diamond to cart">
@@ -59,14 +53,12 @@
           <li>
             <a href="#" aria-label="Favourite Diamond">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Diamond">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
@@ -87,14 +79,12 @@
           <li>
             <a href="#" aria-label="Favourite Gem">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Gem">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
@@ -103,8 +93,7 @@
       <li>
         <h2>Jewel</h2>
         <img src="images/jewel.svg" alt="">
-        <p>The root word of jewellery, so ya know it’s
-        gorg’</p>
+        <p>The root word of jewellery, so ya know it’s gorg’</p>
         <ul>
           <li>
             <a href="#" class="btn" aria-label="Add Jewel to cart">
@@ -116,14 +105,12 @@
           <li>
             <a href="#" aria-label="Favourite Jewel">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Jewel">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
@@ -132,8 +119,7 @@
       <li>
         <h2>Pearl</h2>
         <img src="images/pearl.svg" alt="">
-        <p>Beautifly pearlescent circles created inside
-        living creatures.</p>
+        <p>Beautifly pearlescent circles created inside living creatures.</p>
         <ul>
           <li>
             <a href="#" class="btn" aria-label="Add Pearl to cart">
@@ -145,14 +131,12 @@
           <li>
             <a href="#" aria-label="Favourite Pearl">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Pearl">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
@@ -161,8 +145,7 @@
       <li>
         <h2>Rock</h2>
         <img src="images/rock.svg" alt="">
-        <p>Who doesn’t love a good, plain, ol’ rock now
-        & then.</p>
+        <p>Who doesn’t love a good, plain, ol’ rock now & then.</p>
         <ul>
           <li>
             <a href="#" class="btn" aria-label="Add Rock to cart">
@@ -174,14 +157,12 @@
           <li>
             <a href="#" aria-label="Favourite Rock">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Rock">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
@@ -202,14 +183,12 @@
           <li>
             <a href="#" aria-label="Favourite Ruby">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Ruby">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
@@ -230,14 +209,12 @@
           <li>
             <a href="#" aria-label="Favourite Sapphire">
               <img src="images/favourite.svg" alt="" role="presentation">
-              Favourite
             </a>
           </li>
 
           <li>
             <a href="#" aria-label="Share Sapphire">
               <img src="images/share.svg" alt="" role="presentation">
-              Share
             </a>
           </li>
         </ul>
